<resources>
    <string name="app_name">Farmer Nusantara</string>
    <string name="hint_email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Kata sandi</string>
    <string name="login">Masuk</string>
    <string name="forgot_password">Lupa kata sandi</string>
    <string name="to_daftar">Belum punya akun?</string>
    <string name="daftar_text">Daftar</string>
    <string name="Daftar_text">Daftar</string>
    <string name="first_name_hint">Nama</string>
    <string name="last_name_hint">Nama belakang</string>
    <string name="repeat_password_hint">Ulangi kata sandi</string>
    <string name="login_text">Masuk</string>
    <string name="has_account">Sudah punya akun?</string>
    <string name="farmland">Farmland</string>
    <string name="imageAddActionBar">Tambah Farmland</string>
    <string name="imageFarmland">Gambar Farmland</string>
    <string name="planted">Ditanam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farmland_fragment">Farmland</string>
    <string name="map_fragment">Map</string>
    <string name="news_fragment">Berita</string>
    <string name="profile_fragment">Profil</string>
    <string name="detailFarmland">Detail Farmland</string>
    <string name="imageHistory">History Penyakit</string>
    <string name="detailDisease">Detail Penyakit</string>
    <string name="desc_disease">Deskipsi Penyakit</string>
    <string name="careRecommendation">Rekomendasi Perawatan</string>
    <string name="saveData">Simpan Data</string>
    <string name="createFarmland">Buat Farmland</string>
    <string name="imageDefault">Image Default</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="farmlandHint">Nama Farmland</string>
    <string name="farmlandWideHint">Luas Lahan</string>
    <string-array name="plantType">
        <item>Jagung</item>
        <item>Singkong</item>
        <item>Padi</item>
    </string-array>
    <string name="corn">Jagung</string>
    <string name="profile">Profil</string>
    <string name="name">Name</string>
    <string name="phone_hint">Nomor Telepon</string>
    <string name="edit_profile_data">Edit profile data</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="ganti_kata_sandi">Ganti kata sandi</string>
    <string name="simpan_perubahan">Simpan perubahan</string>
    <string name="imageCamera">Kamera</string>
    <string name="image_confirmation">Konfirmasi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="farmlandColor">Warna Farmland:</string>
    <string name="empty_name">Nama tidak boleh kosong</string>
    <string name="empty_email">Email tidak boleh kosong</string>
    <string name="empty_password">password tidak boleh kosong</string>
    <string name="phone_email">Nomor telepon tidak boleh kosong</string>
    <string name="empty_repeat_password">Harap konfirmasi password</string>
    <string name="different_repeat_password">Password tidak cocok</string>
    <string name="mantap">Mantap</string>
    <string name="account_created">Akun berhasil dibuat</string>
    <string name="lanjut">Lanjutkan</string>
    <string name="logout">Keluar</string>
    <string name="accountVerification">Verifikasi Akun</string>
    <string name="verificationMessage">Kami telah mengirimkan kode verifikasi ke email anda. Mohon cek email anda sekarang</string>
    <string name="verificationResendmessage">Belum menerima kode?</string>
    <string name="verificationResend">Kirim ulang</string>
    <string name="submit">Validasi</string>
    <string name="skipValidation">Nanti Saja</string>
    <string name="otp_change_password">OTP Ganti Password</string>
    <string name="otpChangeMessage">Kami telah mengirimkan kode otp ke email anda. Mohon cek email anda sekarang</string>
    <string name="next">Selanjutnya</string>
    <string name="verifyCode">Verifikasi Kode</string>
    <string name="change_password">Ganti Password</string>
    <string name="emailChangeMessage">Masukan email yang digunakan saat mendaftar. Kami akan mengirimkan kode otp untuk mengganti password ke email tersebut</string>
    <string name="send_otp">Kirim Kode OTP</string>
    <string name="back">Kembali</string>
    <string name="image">Image</string>
    <string name="createNewPassword">Buat Password Baru</string>
    <string name="passwordChangeMessage">Masukan password baru. Agar lebih aman, password baru sebaiknya berbeda dengan sebelumnya</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="password_lacking">Password harus 8 karakter atau lebih</string>
    <string name="invalid_phone">Nomor telepone tidak valid</string>
    <string name="empty">-</string>
    <string name="farmlandLocationHint">Lokasi Farmland</string>
    <string name="armland_color">Warna Farmland</string>
    <string name="empty_farmland">Nama tidak boleh kosong</string>
    <string name="empty_location">Lokasi tidak boleh kosong</string>
    <string name="sure_to_logout">Yakin ingin keluar dari akun ini?</string>
    <string name="ya">Ya</string>
    <string name="ok">OK</string>
    <string name="user_data_was_edited">Data pengguna berhasil diperbarui</string>
    <string name="success">Berhasil</string>
    <string name="plantTypeLabel">Jenis Tanaman:</string>
    <string name="locationLabel">Lokasi:</string>
    <string name="no_internet">Tidak ada Internet</string>
    <string name="pleaseWait">Tunggu sebentar...</string>
    <string name="see_the_map">Lihat map</string>
    <string name="scan_disease">Pindai penyakit</string>
    <string name="delete_farmland">Hapus Farmland</string>
    <string name="edit_farmland">Perbarui Farmland</string>
    <string name="disease_history">Riwayat Penyakit</string>
    <string name="healthyPlant">Tanaman tidak terdapat penyakit.</string>
    <string name="Treatment_Cassava_Mosaic_Disease_CMD">Pendekatan dasar untuk mencegah Mosaik Singkong adalah  memilih tangkai  untuk pembiakan dari tanaman induk tanpa gejala. Ini jarang terjadi secara acak dan  bahan tanam yang terinfeksi digunakan dalam banyak aplikasi. Namun, ada  banyak bukti manfaat mengambil pendekatan yang lebih diskriminatif untuk pilihan bahan tanam (Thresh et al., 1998b).</string>
    <string name="Desc_Cassava_Mosaic_Disease_CMD">Dideskripsikan pertama kali pada tahun 1894 di Tanzania. Penyakit ini kemudian dilaporkan di banyak negara lain di Afrika Timur, Barat, dan Tengah. Sekarang diketahui terjadi di semua negara penghasil. Sebuah laporan penyakit di Indonesia pada tahun 1932. Gejala Mosaik Singkong muncul sebagai ciri khas daun pola mosaik yang mempengaruhi area diskrit dan mereka ditentukan pada tahap awal perkembangan daun Daerah klorosis gagal untuk memperluas sepenuhnya sehingga tegangan yang disebabkan oleh ekspansi lamina yang tidak merata menyebabkan malformasi dan distorsi, daun mengecil, tidak berbentuk dan bengkok, dengan area kuning dipisahkan oleh area berwarna hijau normal, dan daun muda absis (Storey dan Nichols, 1938; 1951).</string>
    <string name="Treatment_Cassava_Green_Mite_CGM">Penyebaran  penyakit ini dapat dicegah dengan berbagai cara, antara lain pemilihan media tumbuh yang baik, pemilihan tanaman induk  yang baik, dan penggunaan pengendalian hayati dan kimia.</string>
    <string name="Desc_Cassava_Green_Mite_CGM">Tungau  hijau singkong, M. tanajoa berasal dari Neotropis, yang secara tidak sengaja dibawa ke Afrika pada tahun 1971 (Nyiira, 1972). M. tanajoa parasit pada singkong yang mempengaruhi produktivitas tahunan yang penting (Manihot esculenta) dan dapat mengurangi berat daun sekitar 50% dan  hasil umbi hingga 80% (Shukla, 1976; Gutierrez et al). , 1988; Pallangyo et al. , 2004). M. tanajoa menyebar terutama melalui aktivitas manusia, termasuk transportasi jarak jauh dari bahan tanaman yang terinfeksi dan media yang terkontaminasi. M. tanajoa biasanya memakan bagian bawah daun muda dengan memasukkan mulut penusuk dan penghisapnya (chelicerae) ke dalam sel individu dan mengekstrak isi sel. Ini menyebabkan pemutihan, karena klorofil tersedot keluar dari sel. Daun mungkin menjadi berbintik-bintik dan layu dan jatuh.</string>
    <string name="Treatment_Cassava_Brown_Steak_Disease_CBSD">Pencegahan dapat dilakukan dengan melakukan pengecekan kesehatan tanaman dari tanaman induk asimtomatik yang harus dijaga dengan seleksi terus menerus dan penyiangan dari  individu yang terinfeksi  muncul selama perkecambahan. Keberhasilan pendekatan ini tergantung pada jumlah penyakit di sekitar singkong dan tingkat penyebarannya, juga dapat menggunakan varietas lokal  yang tahan terhadap infeksi dan tampaknya memiliki nekrosis akar yang lambat, seperti "Nantinaya" di selatan Tanzania Selatan.</string>
    <string name="Desc_Cassava_Brown_Steak_Disease_CBSD">Penyakit bercak coklat singkong  pertama kali dijelaskan oleh Story (1936) yang tercatat di kaki  Pegunungan Usambara (sekarang Tanzania). Semua bagian tanaman singkong dapat menunjukkan gejala infeksi CBSV, tetapi aspek gejalanya jelas, tergantung pada kondisi lingkungan, tahap pertumbuhan tanaman hingga waktu infeksi, dan kerentanan kultivar. Penyakit mosaik singkong dan CBSD  menyebabkan pemutihan berbintik-bintik, tetapi gejala kedua penyakit ini sangat berbeda jika terjadi secara terpisah. Gejala daun Bercak Cokelat mungkin tidak terlihat pada tanaman yang terinfeksi dalam kondisi lingkungan tertentu yang tidak ditentukan.</string>
    <string name="Treatment_Cassava_Bacterial_Blight_CBB">Tindakan pengendalian dapat dilaksanakan dengan menggabungkan praktik tanaman, toleransi kultivar, metode pengendalian biologis, dan tindakan kebersihan.</string>
    <string name="Desc_Cassava_Bacterial_Blight_CBB">Hawar Bakteri mungkin merupakan penyakit yang merusak tanaman lebih banyak  daripada penyakit lain dalam 20 tahun terakhir. Gejala Penyakit hawar bakteri pada singkong pertama kali dilaporkan di Brasil pada tahun 1912 dan sejak itu telah dilaporkan di hampir setiap negara di Asia, Afrika dan Amerika Latin di mana singkong dibudidayakan. Hanya anggota genus Singkong yang dilaporkan terpengaruh. Kombinasi pembusukan dan pembusukan keratin, layu, kematian, eksudasi gusi dan nekrosis vaskular daun Cassaba adalah unik di antara penyakit yang disebabkan oleh jamur fitopatogen. Gejala utama penanaman zat yang terinfeksi adalah layu tunas muda yang tumbuh diikuti dengan kematian. Gejala sekunder biasanya berupa bercak daun bersudut, diikuti pembusukan, defoliasi, layu tunas muda, dan akhirnya kematian. Kerugian yang diderita oleh Hawar Bakteri bervariasi di seluruh dunia dan bisa sangat tinggi, mulai dari 30% hingga 80%.</string>
    <string name="Treatment_Tungro">Berdoa</string>
    <string name="Desc_Tungro">Penyakit Tungro</string>
    <string name="Treatment_Hispa">Hindari penumpukan berlebihan diladang, jarak tanam yang dekat menghasilkan kepadatan daun yang lebih besar yang dapat mentolerir jumlah hispa yang lebih tinggi, ujung daun yang mengandung bercak ranjang harus dimusnahkan.</string>
    <string name="Desc_Hispa">Disebabkan oleh hama, Daun pada padi memiliki kerokan atau terowongan pada permukaan daun hanya menyisakan epidermis bawah berupa garis-garis putih dan daun menjadi layu.</string>
    <string name="Treatment_Down_Mildew">Menanam tanaman yang sehat, terbebas dari patogen , Lakukan pengendalian gulma di lahan, karena sebagian gulma dapat menjadi inang alternatif bagi patogen ini.</string>
    <string name="Desc_Down_Mildew">disebabkan oleh cendawan Pseudoperonospora cubensis. Patogen penyakit embun bulu ditularkan melalui  angin ditandai  daun berwarna pucat dan  menguning.</string>
</resources>