<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VerificationActivity">

    <TextView
        android:id="@+id/verificationTitle"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountVerification"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/verificationMessage"
        style="@style/TextNormalSizematchParentWidth"
        android:text="@string/verificationMessage"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/verificationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/containerOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationMessage">
        <EditText
            android:id="@+id/otpET1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/otpET2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/otpET3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/otpET4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/otpET5"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/verificationResendMessage"
        style="@style/TextNormalSizeWrapcontentWidth"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/verificationResendmessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerOtp" />

    <TextView
        android:id="@+id/verificationResend"
        style="@style/TextNormalSizeWrapcontentWidth"
        android:gravity="center"
        android:layout_marginStart="4dp"
        android:textColor="@color/primary_color"
        android:text="@string/verificationResend"
        app:layout_constraintBaseline_toBaselineOf="@+id/verificationResendMessage"
        app:layout_constraintStart_toEndOf="@id/verificationResendMessage"/>

    <ProgressBar
        android:id="@+id/pbVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btValidation"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@id/btSkipValidation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSkipValidation"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/primary_color"
        android:textColor="@color/primary_color"
        app:strokeWidth="1dp"
        android:text="@string/skipValidation"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>